# APTautoElectroPolisher

./: .gitignore  README.md  cncCommunication.py  fileIO.py  fluidnc_client.py  gcode_generation.py  imageAnalysis.py  pyproject.toml  requirements.txt  settings.yml
apt_polisher/: __init__.py
apt_polisher/gui/: __init__.py  main_window.py  mock.py  model.py
apt_polisher/gui/widgets/: __init__.py  telemetry_plot.py
apt_polisher/instrumentation/: __init__.py  scpi.py
apt_polisher/io/: __init__.py  settings.py
apt_polisher/motion/: __init__.py  fluidnc_client.py  gcode.py  macros.py
apt_polisher/orchestration/: __init__.py  workflow.py
apt_polisher/recipes/: __init__.py  loader.py
apt_polisher/sensors/: __init__.py  current.py
apt_polisher/telemetry/: __init__.py  logger.py  series.py
apt_polisher/vision/: __init__.py  analysis.py
config/: polishing.yml  settings.yml
docs/: manual.md  overview.md
recipes/: default.yml
recipes/motion/: cleaning_cycle.gcode  pickup_standard.gcode  place_standard.gcode
scripts/: autopolish.py  calibrate_camera.py  generate_gcode.py  launch_gui.py
tests/: test_gcode.py  test_gui_model.py  test_recipes.py  test_scpi.py  test_settings.py  test_telemetry.py  test_workflow.py
