[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apt-auto-electropolisher"
version = "0.1.0"
description = "Automation toolkit for atom-probe specimen electropolishing."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Peter Felfer" }
]
license = { file = "LICENSE" }
dependencies = [
  "pyserial>=3.5",
  "opencv-python>=4.8.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "scikit-image>=0.21",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1",
]
gui = [
  "PySide6>=6.5",
  "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
target-version = "py310"
line-length = 100
